--- a/PágianasCss/Historia.css
+++ b/PágianasCss/Historia.css
@@ -17,7 +17,7 @@
 }
 
 #historia .img-abuelos {
-    background: url(/Contenido/abuelosabrazo-kLAG--1248x698@abc.jpg)
+    background: url(../Contenido/abuelosabrazo-kLAG--1248x698@abc.jpg)
     no-repeat;
     margin-left: 70px;
     background-size: cover;
