--- a/PágianasCss/Presentacion.css
+++ b/PágianasCss/Presentacion.css
@@ -20,8 +20,20 @@
 
 #presentacion .left-top {
     background: linear-gradient(rgba(173, 216, 230, 0.563), transparent);
-   /* border: solid 20px rgb(173, 216, 230); */
+    animation-name: leftTop;
+    animation-duration: 2.5s;
 }
+
+/* @keyframes leftTop {
+    0% {
+        transform: translateX(-700px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+} */
 
 #presentacion .left-top h1 {
     font-family: Georgia,Times,"Times New Roman",serif;
@@ -38,12 +50,35 @@
     background-size: cover;
     background-position: center;
     grid-row: span 2;
+    animation-name: rightimg;
+    animation-duration: 2.5s;
 }
-
+/* @keyframes rightimg {
+    0% {
+        translate: 700px 0;
+        opacity: 0; 
+    }
+    100% {
+        translate: 0;
+        opacity: 1;
+    }
+}
+ */
 #presentacion .left-botton {
     background: linear-gradient( transparent, rgba(173, 216, 230, 0.745));
-   /* border: double 40px lightblue; */
+    animation-name: leftBotton;
+    animation-duration: 2.5s;
 }
+/* @keyframes leftBotton {
+   0% {
+    translate: -700px;
+    opacity: 0;
+   }
+   100% {
+    translate: 0;
+    opacity: 1;
+   }     
+} */
 
 #presentacion .left-botton p {
     margin: 150px;
@@ -55,8 +90,9 @@
  border: solid 4.6px black;
  border-radius: 24%;
  padding: 45px;
+ background-color: transparent;
  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
- transition: 1.5s;
+ transition: 1s;
  
 }
 
